# ft_malloc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cluster_alloc.c  configure.sh  inject.c  kek  main.c  malloc.c  memory.c  memory.h  run.sh  show_alloc_mem.c  testf.cpp  todo.txt
Tests/: test.h  test.sh
Visualizer/: CMakeLists.txt
Visualizer/src/: main.cpp
sources/: Makefile  allocc_logger.c  cluster_alloc.c  free.c  get_free_block_from_cluster.c  init_new_cluster.c  main_wrappers.c  malloc.c  malloc.h  mem_dump.c  memory.c  mutex_manager.c  new_cluster.c  norm.txr  realloc.c  service_funcs.c  show_alloc_mem.c  show_mem_hex.c
sources/utilities/: Makefile  itoa.c  mem_to_hex.c  memcpy.c  memcpy_m.c  memmove_m.c  memset_m.c  norm.txt  nums.c  utilities.h
srcs/: errors.c  free.c  malloc.c  malloc_display.c  realloc.c  tools.c
test_files/: Makefile  big_test.c  check.html  log  run.sh  test.c  test.html  test0  test1  test1.c  test2  test2.c  test3  test3bis  test4  test4bis
